--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <div class="rating-card card">
     <div class="badge btn">
-      <img src="./images/icon-star.svg" alt="" role="presentation" />
+      <img src="./interactive-rating-component-main/images/icon-star.svg" alt="" role="presentation" />
     </div>
       <div class="header">
           <h1>How did we do ?</h1>
@@ -41,7 +41,7 @@
   </div>
      <div class="thankyou_card hidden">
       <div class="thank_img">
-        <img src="./images/illustration-thank-you.svg" alt="">
+        <img src="./interactive-rating-component-main/images/illustration-thank-you.svg" alt="">
       </div>
 
       <div class="notification">
